<resources>
    <string name="app_name">Animal Health Book</string>
    <string name="content_authority">com.skoczo.animalhealthbook</string>

    <string name="action_settings">Settings</string>
    <string name="animal_name">Name:</string>
    <string name="save">Save</string>
    <string name="born_date">Born:</string>
    <string name="pick_time">Pick date</string>
    <string name="add_animal">Add animal</string>
    <string name="no_name_error">Animal name cannot be empty</string>
    <string name="no_born_date_error">Please pick born date</string>
    <string name="weight">Weight(kg):</string>
    <string name="no_weight_error">Weight cannot be empty</string>
    <string name="type">Type:</string>
    <string name="picktype">Choose type</string>
    <string name="breed">Breed:</string>

    <string name="spinner_title">Select Category</string>
    <string name="no_type_error">Please select type of animal</string>
    <string name="title_activity_animal_view">AnimalView</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age:</string>
    <string name="no_breed_error">Please put information about breed</string>
    <string name="search">Search</string>
    <string name="years">years</string>
    <string name="year">year</string>
    <string name="and">and</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="animal_view_edit_action">Edit</string>
    <string name="animal_view_add_cost_action">Add cost</string>
    <string name="vaccine">vaccine</string>
    <string name="treatment">treatment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_cost">Add cost</string>
    <string name="cost">cost</string>
    <string name="empty_cost">Cost can\'t be empty</string>
    <string name="addComment">Add comment</string>
    <string name="cant_add_cost">Can\'t add cost</string>
    <string name="cost_added">Cost added</string>
</resources>
