<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="3"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true"
    tools:context=".add.AddAnimal">

    <!-- Image row 0 -->
    <ImageView
        android:layout_width="200px"
        android:layout_height="200px"
        android:id="@+id/add_animal_image"
        android:layout_row="0"
        android:layout_column="0"
        android:src="@drawable/cat" />


    <!-- Header row 1 -->
    <TextView android:id="@+id/add"
        android:text="@string/add_animal"
        android:layout_column="2"
        android:layout_row="1"
        android:textSize="25dp"
        android:textStyle="bold" />

    <!-- Animal name row 2 -->
    <TextView
        android:layout_gravity="right"
        android:text="@string/animal_name"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText android:id="@+id/animal_name"
        android:ems="10"
        android:singleLine="true"
        android:lines="1"
        android:layout_row="2"
        android:layout_column="1" />

    <!-- Born row 3 -->
    <TextView
        android:layout_column="0"
        android:layout_gravity="right"
        android:text="@string/born_date"
        android:layout_row="3" />

    <Button
        android:id="@+id/born_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        android:layout_row="3"
        android:layout_column="1" />

    <!-- weight row 4 -->
    <TextView
        android:layout_column="0"
        android:layout_gravity="right"
        android:text="@string/weight"
        android:id="@+id/WeightText"
        android:layout_row="4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:inputType="number"
        android:singleLine="true"
        android:lines="1"
        android:layout_row="4"
        android:layout_column="1"
        android:ems="10"/>

    <!-- type -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:id="@+id/textView"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right" />


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:prompt="@string/spinner_title"
        android:layout_row="5"
        android:layout_column="1" />


    <!-- breed  row 6-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breed"
        android:id="@+id/textView2"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="right" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/animal_add_breed"
        android:layout_row="6"
        android:singleLine="true"
        android:lines="1"
        android:layout_column="1"
        android:ems="10"/>

    <Space
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="fill"
        android:layout_row="8" />

    <!-- save button -->

    <Button
        android:id="@+id/animal_save"
        android:layout_column="1"
        android:layout_row="8"
        android:text="@string/save" />
</GridLayout>